<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/register_bk_color"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/here_s_your_first_step_with_us"
                    android:textColor="@color/whiteTextColor" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_login_hero" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/whiteTextColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputName"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextName"
                            style="@style/modifiedEditText"
                            android:autofillHints="my hints"
                            android:hint="@string/name"
                            android:inputType="textPersonName"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEmail"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextEmail"
                            style="@style/modifiedEditText"
                            android:autofillHints="my hints"
                            android:hint="@string/login_email_hint"
                            android:inputType="textEmailAddress"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputMobile"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextMobile"
                            style="@style/modifiedEditText"
                            android:autofillHints="my hints"
                            android:hint="@string/mobile_number"
                            android:inputType="phone"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputPassword"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextPassword"
                            style="@style/modifiedEditText"
                            android:autofillHints="my hints"
                            android:hint="@string/login_password_hint"
                            android:inputType="textPassword"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/cirRegisterButton"
                        style="@style/loginButton"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:text="@string/register" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:weightSum="12">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="3"
                    android:background="@color/whiteTextColor" />

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/use_other_methods"
                    android:textAlignment="center"
                    android:textColor="@color/whiteTextColor"
                    android:textSize="12sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="3"
                    android:background="@color/whiteTextColor" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>